Fix scrolling on mobile

--- a/marketing_site/src/components/CourseGroup.css
+++ b/marketing_site/src/components/CourseGroup.css
@@ -55,7 +55,7 @@
 	background: url(/next-page-button.svg) no-repeat center rgb(20,20,20,.7);
 }
 
-@media (pointer: coarce) { /* Touch screen, so scrolling through courses can be done without buttons*/
+@media (pointer: coarse) { /* Touch screen, so scrolling through courses can be done without buttons*/
 	.CourseGroup .scroller {
 		overflow-x: scroll;
 	}
